[project]
name = "sql-repair-env"
version = "0.1.0"
description = "SQL Repair OpenEnv Hackathon Environment"
authors = [{ name = "Anik" }]
dependencies = [
    "openenv-core>=0.2.0",
    "transformers==4.41.2",
    "pydantic",
    "gradio",
    "sentencepiece",
    "accelerate",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"